objects/Apttus_Approval__Approval_Exception_Log_Event__e.object
<CustomObject>
    <fields>
        <fullName>Apttus_Approval__Error_Message__c</fullName>
        <label>Error Message</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Apttus_Approval__Exception_Description__c</fullName>
        <label>Exception Description</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Apttus_Approval__Exception_Type__c</fullName>
        <label>Exception Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus_Approval__Governor_Limit_in_Executing_Code__c</fullName>
        <label>Governor Limit in Executing Code</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Apttus_Approval__Runnings_User_Id__c</fullName>
        <label>Runnings User Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Approval Exception Log Event</label>
    <pluralLabel>Approval Exception Log Events</pluralLabel>
</CustomObject>